--- a/README
+++ b/README
@@ -8,4 +8,4 @@ gcc glb_set.c glb_set_file.c glb_index_tree.c glb_utils.c main.c
 * Поиск полностью готов. Делаю пересечение.
 * В пересечении можно воспользоваться тем же индексом, что и в поиске:
     Только читать узлы индекса не последовательно, а через 2-3-4... 
-    Можно будет выбирать этот коэф. как-то анализируя разряженность set'ов 
+    Можно будет выбирать этот коэф. как-то анализируя разреженность set'ов 
